# rp2040_pico_sdk_playground

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: build.yml
include/: bipbuffer.h  fastgrnn_fc_params.h  fastgrnn_rnn0_params.h  fastgrnn_rnn1_params.h  fbank.h  seven_seg_big.h  sha_rnn_intf.h  skull.h  u8g2_ili9486_driver.h  whistle_detector.h
src/: bipbuffer.c  bipbuffer_test.c  fast_grnn.c  fbank.c  gears.c  ili9486_lcd.pio  ili9486_lcd_8bit_data.pio  inmp441.pio  pitchshifter.c  pitchshifter.dsp  plasma.c  rpi_inmp441_fft_demo.c  rpi_inmp441_kws.c  rpi_inmp441_kws_lcd.c  rpi_inmp441_whistle_demo.c  rpi_lcd_3d_skull_test.c  rpi_lcd_3d_test.c  rpi_lcd_test.c  rpi_oled_test.c  rpi_tflm_micro_speech_demo.cc  rpi_ws2812_lamp.c  u8g2_ili9486_driver.c  whistle_detector.c
